# csv_tools

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Usageandexamples.md  cmake_install.cmake  install_manifest.txt  usage.md  vcpkg.json
csvtools/csvarith/: CMakeLists.txt  Makefile  cmake_install.cmake  csvarith.cpp
csvtools/csvarith/lib/: Makefile
csvtools/csvcolumnselector/: CMakeLists.txt  Makefile  cmake_install.cmake  csvcolumnselector.cpp
csvtools/csvcolumnselector/lib/: Makefile
csvtools/csvjointool/: Makefile  cmake_install.cmake  csvjointool.cpp
csvtools/csvjointool/lib/: Makefile  cmake_install.cmake
csvtools/csvml/: Makefile  cmake_install.cmake  csvml.cpp
csvtools/csvml/lib/: Makefile
csvtools/csvstatistics/: CMakeLists.txt  Makefile  cmake_install.cmake  csvstatistics.cpp
csvtools/csvstatistics/lib/: Makefile
csvtools/showcsv/: CMakeLists.txt  Makefile  cmake_install.cmake  showcsv.cpp
csvtools/showcsv/lib/: Makefile
exampledata/: newvalues.csv  newvalues2.csv  values.csv
lib/: CMakeLists.txt  Makefile
lib/include/: CsvFile.h  CsvOperations.h  StringOperations.h  backtester.h  conditions.h  csv_file.h  csv_operations.h  matrix.h  ml.h  parameters.h  stats.h  string_operations.h
lib/src/: CsvFile.cpp  CsvOperations.cpp  StringOperations.cpp  backtester.cpp  conditions.cpp  csv_file.cpp  csv_operations.cpp  matrix.cpp  ml.cpp  parameters.cpp  stats.cpp  string_operations.cpp
tests/: CMakeLists.txt  arith_test.cpp
tools/arith/: CMakeLists.txt  arith.cpp
tools/backtester/: CMakeLists.txt  backtester.cpp
tools/columnselector/: CMakeLists.txt  columnselector.cpp
tools/joiner/: CMakeLists.txt  joiner.cpp
tools/ml/: CMakeLists.txt  ml.cpp
tools/show/: CMakeLists.txt  show.cpp
tools/statistics/: CMakeLists.txt  statistics.cpp
tradertools/backtester/: backtester.cpp
tradertools/csvcolumnselector/: csvcolumnselector.cpp
tradertools/csvjointool/: CMakeLists.txt
tradertools/csvml/: CMakeLists.txt  csvml.cpp
